--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.21",
     "cookie-parser": "~1.4.4",
+    "crypto-js": "^4.0.0",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mailchimp-api-v3": "^1.14.0",
     "mixpanel": "^0.13.0",
     "mongoose": "^5.9.25",
     "morgan": "~1.9.1",
-    "sync-request": "^6.1.0"
+    "nodemailer": "^6.4.13",
+    "sib-api-v3-sdk": "^8.0.1",
+    "sync-request": "^6.1.0",
+    "then-request": "^6.0.2",
+    "uid2": "0.0.3"
   }
 }
