--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactapp",
+  "name": "Quoi Faire",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,6 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3000",
   "eslintConfig": {
     "extends": [
       "react-app",
