--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -5,13 +5,21 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "leaflet": "^1.7.1",
+    "material-ui": "^1.0.0-beta.47",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.0.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-scroll": "^1.8.1",
+    "react-virtualized": "^9.22.2",
+    "react-window": "^1.8.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
