--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -15,6 +15,7 @@
     "material-ui": "^1.0.0-beta.47",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.12.2",
     "react-leaflet": "^3.0.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
