--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "animate.css": "^4.1.1",
     "google-map-react": "^2.1.9",
     "leaflet": "^1.7.1",
     "leaflet.awesome-markers": "^2.0.5",
     "material-ui": "^1.0.0-beta.47",
     "react": "^17.0.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
     "react-leaflet": "^3.0.2",
