--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mailchimp-api-v3": "^1.14.0",
-    "materialize-css": "^1.0.0-rc.2",
+    "materialize-css": "^1.0.0",
     "mixpanel": "^0.13.0",
-    "mongoose": "^5.9.25",
+    "mongoose": "^5.11.16",
     "morgan": "~1.9.1",
-    "nodemailer": "^6.4.15",
-    "sib-api-v3-sdk": "^8.0.1",
+    "nodemailer": "^6.4.18",
+    "sib-api-v3-sdk": "^8.2.0",
     "sync-request": "^6.1.0",
     "then-request": "^6.0.2",
     "uid2": "0.0.3"
